--- a/page2.html
+++ b/page2.html
@@ -20,60 +20,61 @@
             <tr>
                 <td>1</td>
                 <td><img src="foto kucing.jpeg" alt=""></td>
-                <td>Smilling Cat</td>
-                <td>HealthyFish</td>
-                <td><p><label for="Vertebrate">Vertebrate</label>
-                    <input type="radio" id="group1" name= "group1" value="Vertebrate"/>
-                    <label for="Invertebrate">Invertebrate</label>
-                    <input type="radio" id="group1" name="group1" value="Invertebrate"/></td>
+                <td>Smilling<sup>Cat</sup> </td>
+                <td>Healthy<sup>Fish</sup></td>
+                <td><p><label for="Vertebrate1">Vertebrate</label>
+                    <input type="radio" id="Vertebrate1" name= "group1" value="Vertebrate1"/>
+                    <label for="Invertebrate1">Invertebrate</label>
+                    <input type="radio" id="Invertebrate1" name="group1" value="Invertebrate1"/></td>
                 </p>
             </tr>
             <tr>
                 <td>2</td>
                 <td><img src="happy-dog.jpg" alt=""></td>
-                <td>Happy Dog</td>
-                <td>Fresh Meat</td>
-                <td><p><label for="Vertebrate">Vertebrate</label>
-                    <input type="radio" id="group2" name="group2" value="Vertebrate"/>
-                    <label for="Invertebrate">Invertebrate</label>
-                    <input type="radio" id="group2" name="group2" value="Invertebrate"/></td>
+                <td>Happy<sup>Dog</sup></td>
+                <td>Fresh<sup>Meat</sup></td>
+                <td><p><label for="Vertebrate2">Vertebrate</label>
+                    <input type="radio" id="Vertebrate2" name="group2" value="Vertebrate2"/>
+                    <label for="Invertebrate2">Invertebrate</label>
+                    <input type="radio" id="Invertebrate2" name="group2" value="Invertebrate2"/></td>
                     </p>
             </tr>
             <tr>
                 <td>3</td>
                 <td><img src="simpanse.png" alt=""></td>
-                <td>Confuse Simpanse</td>
-                <td>SweetBanana</td>
-                <td><p><label for="Vertebrate">Vertebrate</label>
-                    <input type="radio" id="group3" name="group3" value="Vertebrate"/>
-                    <label for="Invertebrate">Invertebrate</label>
-                    <input type="radio" id="group3" name="group3" value="Invertebrate"/></td>
+                <td>Confuse<sup> Simpanse</sup></td>
+                <td>Sweet<sup>Banana</sup></td>
+                <td><p><label for="Vertebrate3">Vertebrate</label>
+                    <input type="radio" id="Vertebrate3" name="group3" value="Vertebrate3"/>
+                    <label for="Invertebrate3">Invertebrate</label>
+                    <input type="radio" id="Invertebrate3" name="group3" value="Invertebrate3"/></td>
                 </p>
             </tr>
             <tr>
                 <td>4</td>
                 <td><img src="jellyfish.jpg" alt=""></td>
-                <td>Frisky Jellyfish</td>
-                <td>Saltwater Plankton</td>
-                <td><p><label for="Vertebrate">Vertebrate</label>
-                    <input type="radio" id="group4" name=" group4" value="Vertebrate"/>
-                    <label for="Invertebrate">Invertebrate</label>
-                    <input type="radio" id="group4" name="group4" value="Invertebrate"/></td>
+                <td>Frisky<sup>Jellyfish</sup></td>
+                <td>Saltwater<sup>Plankton</sup></td>
+                <td><p><label for="Vertebrate4">Vertebrate</label>
+                    <input type="radio" id="Vertebrate4" name="group4" value="Vertebrate4"/>
+                    <label for="Invertebrate4">Invertebrate</label>
+                    <input type="radio" id="Invertebrate4" name="group4" value="Invertebrate4"/></td>
+                </p>
                 </p>
             </tr>
             <tr>
                 <td>5</td>
                 <td><img src="squid.jpeg" alt=""></td>
-                <td>Swimming Squid</td>
-                <td>Small Fish</td>
-                <td><p><label for="Vertebrate">Vertebrate</label>
-                    <input type="radio" id="group5" name="group5" value="Vertebrate"/>
-                    <label for="Invertebrate">Invertebrate</label>
-                    <input type="radio" id="group5" name="group5" value="Invertebrate"/></td>
+                <td>Swimming<sup>Squid</sup></td>
+                <td>Small<sup>Fish</sup></td>
+                <td><p><label for="Vertebrate5">Vertebrate</label>
+                    <input type="radio" id="Vertebrate5" name="group5" value="Vertebrate5"/>
+                    <label for="Invertebrate5">Invertebrate</label>
+                    <input type="radio" id="Invertebrate5" name="group5" value="Invertebrate5"/></td>
                 </p>
             </tr>
     </table>
     </div>
-    <a href="page1.html">Previous page 1</a>
+    <a href="index.html">Previous page 1</a>
 </body>
 </html>
